# x402-vendor

./: .env.example  .envrc  .prettierignore  CLAUDE.md  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
python/examples/: README.md  pyproject.toml
python/examples/docs/: environment-variables.md  running-mcp-proxy.md
typescript/: .prettierignore  .prettierrc  eslint.config.mjs  tsconfig.base.jsonc  vitest.config.ts
typescript/examples/fastmcp-x402-server/: README.md  package.json  tsconfig.build.json  tsconfig.json  tsconfig.src.json  tsconfig.tests.json
typescript/examples/fastmcp-x402-server/src/: cli.ts  index.ts  server.ts
typescript/examples/fastmcp-x402-server/tests/: server.test.ts
typescript/examples/langchain-mcp/: README.md  eslint.config.mjs  package.json  tsconfig.json
typescript/examples/langchain-mcp/src/: index.ts
typescript/examples/x402-vendor-app/: .env.example  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json
typescript/examples/x402-vendor-app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
typescript/examples/x402-vendor-app/components/: CreateItemForm.tsx  ItemCard.tsx  ItemDetailsModal.tsx  ItemList.tsx  PurchaseModal.tsx  TemplateItems.tsx
typescript/examples/x402-vendor-app/config/: wagmi.ts
typescript/examples/x402-vendor-app/types/: item.ts
typescript/examples/x402-vendor-app/utils/: config.ts  constants.ts  formatting.ts  itemStorage.ts  payment.ts  templateItems.ts
typescript/examples/x402-vendor-app/webpack-polyfills/: empty.js
(+7 files in other folders)
