[project]
name = "ampersend-examples-python"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "ampersend-sdk>=0.0.1a2",
    "x402-a2a",
]

[tool.uv.sources]
x402-a2a = { git = "https://github.com/google-agentic-commerce/a2a-x402", subdirectory = "python/x402_a2a", rev = "a50b512a61880c180bc82c1332aee271f46942b6" }

[tool.uv.workspace]
members = ["python/*"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["x402_a2a.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def", "arg-type", "index", "type-arg"]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "mypy>=1.8.0",
]
